update to readme

--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 # Data Sonification
+
+## Project Description
+
+## Data Source
+The data for this project was sourced from the (Land-Ocean Temperature Index)[https://data.giss.nasa.gov/gistemp/] from NASA's Goddard Institute for Space Studies. This dataset records the annual global-mean change from 1880 to the present.
+
+## Data Preprocessing
+Initially the data had a range of 
